--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -2,40 +2,50 @@
 
 {{>header}}
 <div class="row marginAlign ">
-	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
+	<div class="col-lg-8 col-sm-7 col-xs-8 col-md-8 border no-padding">
 		<div class=" row doc">
 			<div class="row doc_profile">
-				<div class="col-lg-1">
+				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
 					<img src="{{cloudinaryUrl doctor.imageOuter}}">
 				</div>
 
-				<div class="col-lg-5">
+				<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5">
 					<h3> {{doctor.name}}</h3>
 					{{{doctor.summary}}}
 				</div>
 
-				<div class="col-lg-2" style="padding:0px;">
+				<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2" style="padding:0px;">
 					<div class="consult_block">
-						<div class="info" style="margin-bottom:0px;">Consultation</div>
-						<div class="info">Fees</div>
+						<div class="info" style="margin-bottom:0px;">GMT</div>
+						<!-- <div class="info">Fees</div> -->
 					</div>
 					<div class="consult_content">
 						<div class="consult_data">
-							USD 59
+							Verified
 						</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-sm-2 col-xs-4 col-md-4">
 				</div>
 
-				<div class="col-lg-5 exp" style="">
+				<div class="col-lg-5 col-sm-8 col-xs-5 col-md-5 exp" style="">
 					<h4 style="">Area of Expertise</h4>
 					{{{doctor.expertise}}}
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+				</div>
+
+				<div class="col-lg-10 col-sm-9 col-xs-10 col-md-10 philo" style="">
+					<h4 style="padding-left:35px; font-family:SourceSansPro-Semibold;color:rgb(43,43,43);">Practice Philosophy</h4>
+					{{{doctor.philosophy}}}
 				</div>
 			</div>
 		</div>
@@ -54,17 +64,17 @@
 		<!-- <div class="scrolls" data-spy="scroll" data-target="#navbar-example"> -->
 		<nav class="navbar navbar-default" id="navdoctor">
 			<ul id="myNavbar" class="nav navbar-nav row" style="padding-top: 8px;">
-				<li class="col-lg-1">&nbsp;</li>
-				<li data-menuanchor="bio" class="col-lg-2">
+				<li class="col-lg-1 col-md-1 col-sm-0 col-xs-1">&nbsp;</li>
+				<li data-menuanchor="bio" class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
 					<a class="demo" href="#section1">Bio</a>
 				</li>
-				<li data-menuanchor="procedures" class="col-lg-3">
+				<li data-menuanchor="procedures" class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 					<a class="demo" href="#section2">Procedure</a>
 				</li>
-				<li data-menuanchor="providers" class="col-lg-3">
+				<li data-menuanchor="providers" class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 					<a class="demo" href="#section3" style="margin-left:7px;">Providers</a>
 				</li>
-				<li data-menuanchor="reviews" class="col-lg-2">
+				<li data-menuanchor="reviews" class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
 					<a class="demo" href="#section4">Reviews</a>
 				</li>
 			</ul>
@@ -73,12 +83,12 @@
 			<section id="section1">
 				<h4 id="bio"></h4>
 				<div class="row">
-					<div class="col-lg-1">
+					<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
 					</div>
-					<div class="col-lg-10 para">
+					<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 para">
 						{{{doctor.description}}}
 					</div>
-					<div class="col-lg-1">
+					<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
 					</div>
 				</div>
 			</section>
@@ -98,7 +108,7 @@
 				<div class="row doc_proc" style="">
 					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 					</div>
-					<div class="col-lg-10 doc_border" style="">
+					<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 doc_border" style="">
 						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 							{{#each procedures}}
 								<div class="panel panel-default">
@@ -110,10 +120,10 @@
 														{{name}}
 														<!-- <span class="fa fa-plus-square-o"></span> -->
 													</div>
-													<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3 price">
+													<div class="col-lg-3 col-sm-1 col-xs-3 col-md-3 price">
 														{{price}}
 													</div>
-													<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+													<div class="col-lg-3 col-sm-4 col-xs-3 col-md-3">
 														<input class="btn btn-primary btn-md doc_btn" type="submit" value="Get Free Quote" style="outline:none">
 													</div>
 												</div>
@@ -139,10 +149,10 @@
 					<div class="row">
 						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 						</div>
-						<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+						<div class="col-lg-3 col-sm-5 col-xs-3 col-md-3">
 							<span>Affiliated Providers</span>
 						</div>
-						<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
+						<div class="col-lg-8 col-sm-6 col-xs-8 col-md-8">
 						</div>
 					</div>
 				</h4>
@@ -151,14 +161,14 @@
 					<div class="row procedure-box ">
 						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 						</div>
-						<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+						<div class="col-lg-3 col-sm-4 col-xs-3 col-md-3">
 							<img src="">
 						</div>
-						<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5">
+						<div class="col-lg-5 col-sm-6 col-xs-5 col-md-5">
 							<h3>{{name}}</h3>
 							<button type="button" class="btn btn-primary btn-md raised" style="outline:none">Know More</button>
 						</div>
-						<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+						<div class="col-lg-2 col-sm-1 col-xs-2 col-md-2">
 						</div>
 					</div>
 				{{/each}}
@@ -180,7 +190,7 @@
 		<!-- </div> -->
 	</div>
 
-	<div class="col-lg-4 col-sm-4 col-xs-4 col-md-4 no-padding name">
+	<div class="col-lg-4 col-sm-5 col-xs-4 col-md-4 no-padding name">
 		{{#each speciality}}
 			<h3> {{name}} </h3>
 		{{/each}}
@@ -273,9 +283,9 @@
 							<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 								<input type="text" class="form-control" id="age" placeholder="Age" name="age" style="">
 							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+							<div class="col-lg-2 col-md-2 col-sm-0 col-xs-2">
 							</div>
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="padding-top: 10px;">
+							<div class="col-lg-6 col-md-6 col-sm-8 col-xs-6" style="padding-top: 10px;">
 								<label for="gender" class="gender" style="">Sex:</label>
 								<label class="radio-inline">
 									<input type="radio" name="gender" class="value" value="Male" style="">M</label>
