--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -5040,6 +5040,10 @@ table tr:last-child td:last-child {
 
 .philo {
   margin-top: 40px; }
+  .philo h4 {
+    padding-left: 35px;
+    font-family: SourceSansPro-Semibold;
+    color: #2b2b2b; }
 
 .philo > p {
   font-family: SourceSansPro-Regular;
@@ -5150,6 +5154,10 @@ table tr:last-child td:last-child {
   margin-top: 112px; }
   .marginAlign .border {
     border-right: 1px solid #ededed; }
+  .marginAlign .category_name {
+    font-size: 30px;
+    font-family: SourceSansPro-Semibold;
+    color: white; }
 
 .procedure {
   overflow: hidden;
@@ -5346,6 +5354,19 @@ table tr:last-child td:last-child {
     font-size: 20px;
     color: white;
     text-align: center; }
+  .frm_doctor .doc_acc .panel-default {
+    border: none;
+    box-shadow: none; }
+  .frm_doctor .doc_acc .panel-heading {
+    margin-top: 10px;
+    padding: 10px 15px; }
+  .frm_doctor .doc_acc .form_accordion .medical {
+    color: #5f5f5f;
+    font-family: SourceSansPro-Regular;
+    font-size: 16px; }
+  .frm_doctor .doc_acc .form_accordion .icon {
+    padding-top: 6px;
+    color: #5f5f5f; }
   .frm_doctor .form_fields #age {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -5823,6 +5844,8 @@ a:focus {
     display: block !important; }
   .marginAlign {
     margin-top: 80px; }
+  #navprocedure.sticky {
+    top: 101px; }
   #navdoctor.sticky {
     top: 87px;
     width: 58.2%; }
