--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -8,7 +8,7 @@
 				<div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
 				</div>
 				<div class="col-md-10 col-lg-10 col-sm-10 col-xs-12" style="padding-left:12px;">
-					<span style="font-size: 30px;font-family: SourceSansPro-Semibold;color: white;">{{{specialityn}}}</span>
+					<span class="category_name">{{{specialityn}}}</span>
 				</div>
 			</div>
 		</div>
@@ -103,7 +103,6 @@
 									</div>
 									<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
 										<img src="{{cloudinaryUrl imageOuter}}">
-										<!-- {{cloudinaryUrl imageOuter}} -->
 									</div>
 									<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5 procedure-doc">
 										<h4><a href="/doctor/{{key}}">{{name}}</a></h4>
@@ -190,8 +189,8 @@
 							<div class="row">
 								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 								</div>
-								<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
-									<img src="/images/{{key}}.png">
+								<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+								<img src="/images/{{key}}.png">
 									<!-- style="width:27px;height:28.1px;position:relative;top:8px" -->
 								</div>
 								<div class="col-lg-9 col-sm-8 col-xs-9 col-md-9">
@@ -206,7 +205,7 @@
 							<div class="row">
 								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 								</div>
-								<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
+								<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
 									<img src="/images/{{key}}.png">
 								</div>
 								<div class="col-lg-9 col-sm-8 col-xs-9 col-md-9">
