--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -356,10 +356,10 @@ table tr:last-child td:last-child {
 				box-shadow: 0 3px 0 0 #b24b4d;
 				background-color: #ff6c6f;
 				border-color: rgb(255,108,111);
-				margin-top: 53px;
+				margin-top: 60px;
 				font-family: SourceSansPro-Regular;
 				font-size: 16px;
-				padding: 4px 12px;
+				padding: 1px 10px;
 }
 .btn-primary.raised.active {
 				outline: none;
@@ -930,18 +930,9 @@ a:focus {
 								font-size: 15px;
 				}
 }
-// .connect {
-//
-// 				// background-color: #ff6c6f;
-// 				// border-color: #ff6c6f;
-// 				// box-shadow: 0 2px 0 0 #B24B4D;
-// 				font-family: SourceSansPro-Regular;
-// 				font-size: 16px;
-// 				padding: 1px 12px;
-// 				;
-//
-// 				// width:80px;
-// }
+.btn-connect{
+	padding-left:35px;
+}
 .qwe {
 				padding-left: 0;
 				padding-right: 0;
@@ -1131,29 +1122,59 @@ a:focus {
 @media(max-width:1000px) {
 				.navbar-collapse.collapse {
 								display: none !important;
+
 				}
 				.navbar-toggle {
 								display: block !important;
+
 				}
 				.navbar-collapse {
 								overflow-x: visible !important;
 				}
-				.navbar-collapse.in {
-								overflow-y: auto !important;
-				}
+				// .navbar-collapse.in {
+				// 				overflow-y: auto !important;
+				// }
 				.collapse.in {
 								display: block !important;
 				}
 				.marginAlign {
 								margin-top: 80px;
 				}
+
+				.align-right{
+					padding-right: 20px;
+				}
+				.align-left{
+					padding-left: 65px;
+				}
+				.btn-connect{
+					padding-left: 50px;
+				}
 				#navprocedure.sticky {
-								top: 101px;
+								top: 88px;
+								width: 58.2%;
 				}
 				#navdoctor.sticky {
 								top: 87px;
 								width: 58.2%;
 				}
+				.proc{
+					text-align: center;
+				}
+			.procedure-box{
+				text-align: center;
+				img{
+					width:50%;
+				}
+				h3{
+					width:60%;
+					margin-left: 90px;
+					margin-top: 20px;
+				}
+			.btn-primary.raised{
+					margin-top: 20px;
+				}
+			}
 				.doc {
 								.doc_profile {
 												img {
@@ -1181,85 +1202,81 @@ a:focus {
 								}
 				}
 }
-@media only screen and (max-width: 750px) {
-				.hero {
-								background: grey;
-								.container {
-												.pp {
-																margin-top: 0;
-																text-align: center;
-																padding-left: 0;
-																h2 {
-																				font-size: 180%;
-																}
-																p {
-																				font-size: 15px;
-																				margin-top: 3px;
-																}
-																.border_doc {
-																				border-bottom: 5px solid #ff6c6f;
-																				width: 25%;
-																				margin: -15px auto 0;
-																				// margin-top: -15px;
-																				// margin-bottom: 10px;
-																				// margin-left:220px;
-																}
-												}
-												.form-group {
-																.form-control {
-																				width: 100%;
-																				margin-left: 0;
-																				margin-right: auto;
-																				height: 45px;
-																}
-																#proc {
-																				font-size: 25px;
-																				font-weight: 200;
-																				text-align: center;
-																				margin: 0 auto;
-																				display: block;
-																}
-																.main_button {
-																				// margin: 0 auto;
-																				// display: block;
-																				.btn-primary.rais {
-																								width: 50%;
-																								display: block;
-																								margin: 0 auto;
-																								height: 45px;
-																								margin-top: 10px;
-																								margin-bottom: 20px;
-																								.search_doc {
-																												font-size: 18px;
-																												font-family: SourceSansPro-Semibold;
-																												// width: 100%;
-																								}
-																				}
-																}
-												}
-								}
-				}
-}
-@media only screen and (max-width: 774px) {
-				.qwe {
-								display: none;
-				}
-				.doctor {
-								// width: 271px;
-								.thumbnail {
-												height: 321px;
-												width: 271px;
-												margin-left: auto;
-												margin-right: auto;
-												padding-left: 0;
-								}
-				}
-				.hero .container .form-group #proc {
-								text-align: center;
-								margin: 0 auto;
-								// margin-left: 200px;
-				}
-}
-.form-horizontal {
-				margin-top: 20px;
-}
+// @media only screen and (max-width: 750px) {
+// 				.hero {
+// 								background: grey;
+// 								.container {
+// 												.pp {
+// 																margin-top: 0;
+// 																text-align: center;
+// 																padding-left: 0;
+// 																h2 {
+// 																				font-size: 180%;
+// 																}
+// 																p {
+// 																				font-size: 15px;
+// 																				margin-top: 3px;
+// 																}
+// 																.border_doc {
+// 																				border-bottom: 5px solid #ff6c6f;
+// 																				width: 25%;
+// 																				margin: -15px auto 0;
+//
+// 																}
+// 												}
+// 												.form-group {
+// 																.form-control {
+// 																				width: 100%;
+// 																				margin-left: 0;
+// 																				margin-right: auto;
+// 																				height: 45px;
+// 																}
+// 																#proc {
+// 																				font-size: 25px;
+// 																				font-weight: 200;
+// 																				text-align: center;
+// 																				margin: 0 auto;
+// 																				display: block;
+// 																}
+// 																.main_button {
+// 																				.btn-primary.rais {
+// 																								width: 50%;
+// 																								display: block;
+// 																								margin: 0 auto;
+// 																								height: 45px;
+// 																								margin-top: 10px;
+// 																								margin-bottom: 20px;
+// 																								.search_doc {
+// 																												font-size: 18px;
+// 																												font-family: SourceSansPro-Semibold;
+//
+// 																								}
+// 																				}
+// 																}
+// 												}
+// 								}
+// 				}
+// }
+// @media only screen and (max-width: 774px) {
+// 				.qwe {
+// 								display: none;
+// 				}
+// 				.doctor {
+//
+// 								.thumbnail {
+// 												height: 321px;
+// 												width: 271px;
+// 												margin-left: auto;
+// 												margin-right: auto;
+// 												padding-left: 0;
+// 								}
+// 				}
+// 				.hero .container .form-group #proc {
+// 								text-align: center;
+// 								margin: 0 auto;
+//
+// 				}
+// }
+// .form-horizontal {
+// 				margin-top: 20px;
+// }
