--- a/Gmt/templates/views/partials/header.hbs
+++ b/Gmt/templates/views/partials/header.hbs
@@ -16,19 +16,19 @@
 							</button> -->
 							<div class="col-lg-10  col-md-10 col-sm-10 col-xs-10" >
 								<a href="/" class="navbar-brand" style="width:100%;height:auto;outline:none">
-									<img alt="Goa Medical Travel" src="/images/gmtwhite.png" style="width:60%;height:auto;margin-bottom: 5px; margin-top: 5px;  margin-left: -5px;" />
+									<img alt="Goa Medical Travel" src="/images/gmtwhite.png" class="logo" style="width:60%;height:auto;margin-bottom: 5px; margin-top: 5px;  margin-left: -5px;" />
 								</a>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+				<div class="col-lg-8 col-md-8 col-sm-7 col-xs-8 ">
 					<div class="row">
 						<div class="col-lg-11 col-md-11 col-sm-11 col-xs-11">
-							<div class="row">
+							<div class="row align-right">
 								<div class="collapse navbar-collapse">
 									<ul class="nav navbar-nav navbar-right">
-										{{# each navs}}
+										{{#each navs}}
 										<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
 											<a href="{{ href }}" style="color:rgb(235,235,235);;background-color:rgba(0,0,0,0);">{{ label }}</a>
 										</li>
@@ -36,15 +36,15 @@
 									</ul>
 								</div>
 							</div>
-							<div class="row" style="padding-top: 10px;">
+							<div class="row align-left" style="padding-top: 10px;">
 								<div class="collapse navbar-collapse" style="padding-right: 15px;">
 									<ul class="nav navbar-nav navbar-right">
-										{{# each navLinks}}
+										{{#each navLinks}}
 										<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
 											<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgba(0,0,0,0);">{{ label }}</a>
 										</li>
 										{{/each}}
-										<li style="padding-left:35px;">
+										<li  class="btn-connect" style="">
 											<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);border:2px solid #FF6C6F;color:#FF6C6F;font-family:SourceSansPro-Regular;font-size:16.5px;">Connect</button>
 										</li>
 										<!-- <li style="padding-left:35px;color:rgb(220,220,220);padding-top: 10px;color">
@@ -57,15 +57,18 @@
 								</div>
 							</div>
 						</div>
-						<button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
+
+						<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-0 col-md-0 col-sm-1 col-xs-1">
+					<button type="button" data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
-						</button>
-						<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-						</div>
-					</div>
+					</button>
 				</div>
 			</div>
 		</div>
