--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -348,12 +348,13 @@ table tr:last-child td:last-child {
 				border: 1px solid rgb(83, 200, 171);
 				color: white;
 				background-color: rgb(83, 200, 171);
-				box-shadow: 0 3px 0 0 #317866;
+				box-shadow: 0 3px 0 0 #458575;
 				font-family: SourceSansPro-Regular;
 				font-size: 16px;
+				padding: 3px 12px;
 }
 .btn-primary.raised {
-				box-shadow: 0 3px 0 0 #b24b4d;
+				box-shadow: 0 3px 0 0 #C16E70;
 				background-color: #ff6c6f;
 				border-color: rgb(255,108,111);
 				margin-top: 60px;
@@ -890,14 +891,14 @@ a:focus {
 								border: none;
 				}
 				.image1 {
-								width: 50%;
+								width: 40%;
 								height: auto;
 				}
 }
 .thumbnail>p {
 				font-family: SourceSansPro-Semibold;
 				text-align: center;
-				font-size: 16px;
+				font-size: 18px;
 				padding-top: 15px;
 }
 .thumbnail>span {
