--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -23,10 +23,10 @@
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Best priced healthcare </h2>
 						<div class="row">
 							<div class="col-lg-4" style="padding-right:0px">
-								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> World class hospitality</h2>
+								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Warm hospitality</h2>
 							</div>
 							<div class="col-lg-4 " style="">
-								<p style="font-size:16px;font-family:SourceSansPro-Regular;padding-top:8px;">learn more...</p>
+								<img src="../images/Arrow.png" style="width:8%;padding-top:10px;">								<!-- <p style="font-size:16px;font-family:SourceSansPro-Regular;padding-top:8px;">learn more...</p> -->
 							</div>
 						</div>
 					</div>
@@ -42,7 +42,8 @@
 								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the various arts of yoga</h2>
 							</div>
 							<div class="col-lg-4 " style="padding-left:0px;">
-								<p style="font-size:16px;font-family:SourceSansPro-Regular;padding-top:8px;margin-left:-30px;">learn more...</p>
+									<img src="../images/Arrow.png" style="width:8%;padding-top:10px;">
+								<!-- <p style="font-size:16px;font-family:SourceSansPro-Regular;padding-top:8px;margin-left:-30px;">learn more...</p> -->
 							</div>
 						</div>
 					</div>
@@ -58,7 +59,8 @@
 								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Curative healing packages</h2>
 							</div>
 							<div class="col-lg-4" style="padding-left:0px;">
-								<p style="font-size:16px;font-family:SourceSansPro-Regular;padding-top:8px;margin-left:-15px">learn more...</p>
+									<img src="../images/Arrow.png" style="width:8%;padding-top:10px;">
+								<!-- <p style="font-size:16px;font-family:SourceSansPro-Regular;padding-top:8px;margin-left:-15px">learn more...</p> -->
 							</div>
 						</div>
 					</div>
@@ -92,7 +94,7 @@
 									<p style="">Send customised queries</p>
 									<div style=" text-align:center">
 										<span style="">
-											Learn More ...
+											<img src="../images/Arrow.png" style="width:8%;">
 										</span>
 									</div>
 								</div>
@@ -115,7 +117,7 @@
 									<p style="">Get multiple quotes</p>
 									<div style=" text-align:center">
 										<span style="">
-											Learn More ...
+											<img src="../images/Arrow.png" style="width:8%;">
 										</span>
 									</div>
 								</div>
@@ -138,7 +140,7 @@
 									<p style="">Get a second opinion</p>
 									<div style=" text-align:center">
 										<span style="">
-											Learn More ...
+									<img src="../images/Arrow.png" style="width:8%;">
 										</span>
 									</div>
 								</div>
