--- a/Gmt/templates/views/package.hbs
+++ b/Gmt/templates/views/package.hbs
@@ -19,7 +19,7 @@
 						<h3 style="font-family:SourceSansPro-Semibold"> {{package.name}}</h3>
 					</div>
 					<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 ">
-						<button type="submit" class="" style="margin-top:12px;color:#456C39;border: 2px solid #456C39;border-radius:4px;padding: 5px 20px;font-family:SourceSansPro-Regular;font-size:16.5px;background-color:white;" data-toggle="modal" data-target="#myModal">Enquire</button>
+						<button type="submit" class="" style="margin-top:12px;color:#456C39;border: 2px solid #456C39;border-radius:4px;padding: 5px 20px;font-family:SourceSansPro-Regular;font-size:16.5px;background-color:white;" data-toggle="modal" data-target="#myModal1">Enquire</button>
 					</div>
 				</div>
 				{{{package.description}}}
@@ -194,7 +194,7 @@
 	</div>
 
 	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 		<div class="modal-dialog" role="document" style="width:20%;top:80px">
 			<div class="modal-content">
 				<div class="modal-header">
