--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -84,20 +84,21 @@
 					<div class="p">
 						{{#each provider.doctors}}
 							<div class="row proc">
-								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+								<div class="col-lg-1 col-sm-1 col-xs-5 col-md-1">
 								</div>
-								<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 ">
-									<img src="images/logo.png">
+								<div class="col-lg-2 col-sm-12 col-xs-2 col-md-2">
+									<img src="{{cloudinaryUrl imageOuter}}"  style="filter: grayscale(1);">
 								</div>
-								<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5  procedure-doc">
+								<div class="col-lg-6 col-sm-12 col-xs-6 col-md-6 procedure-doc">
 									<h4><a href="/doctor/{{key}}">{{name}}</a></h4>
-									{{{description}}}
+									{{{summary}}}
 								</div>
-								<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
-									<!-- <input type="text" class="form-control" id="text" value="View Profile"> -->
-									<a href="" id="link" style="">View Profile</a>
+								<div class="col-lg-2 col-sm-12 col-xs-2 col-md-2">
+									<span>
+										<input class="btn btn-primary btn-md rai" type="submit" value="View Profile" style="outline:none;" onclick="location.href='/doctor/{{key}}'">
+									</span>
 								</div>
-								<div class="col-lg-1 col-sm-0 col-xs-1 col-md-1">
+								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 								</div>
 							</div>
 						{{/each}}
@@ -191,9 +192,136 @@
 	</div>
 	<div class="col-lg-4 col-sm-4 col-xs-4 col-md-4 no-padding name">
 		<h3>{{provider.name}}</h3>
-		<br>
-		<br>
-		<div class="form">
+		<!-- <br>
+		<br> -->
+
+		<div class="form frm_doctor" style="margin-top: -10px;	background-color: #f6f6f6;margin-left:-1px;">
+			<h5>Request a Free Quote</h5>
+			<div class="row">
+				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+				</div>
+				<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+					<form method="post" enctype="multipart/form-data">
+						<input type="hidden" name="action" value="second">
+						<textarea class="form-control" rows="5" placeholder="Case info" name="caseinfo" style="margin-top: 15px;border-radius:8px;"></textarea>
+						<div class="panel-group doc_acc" id="accordion1" class="reports" role="tablist" aria-multiselectable="true">
+							<div class="panel panel-default" style="">
+								<div class="panel-heading" role="tab" id="headingOne" style="">
+									<a role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="outline:none;">
+										<h4 class="panel-title" style="color:black">
+											<div class="row form_accordion">
+												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" style="padding-top:3px">
+													<span class="medical" style="">Medical Reports</span>
+												</div>
+												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
+													<span style="" class="glyphicon glyphicon-chevron-down"></span>
+												</div>
+											</div>
+										</h4>
+									</a>
+								</div>
+								<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+									<div class="panel-body" style="background-color:rgb(237,237,237);border-top-width: 0px; ">
+										<input type="file" name="fileupload" size="80" value="Attach" multiple>
+									</div>
+								</div>
+							</div>
+
+							<div class="panel panel-default" style="border: none;box-shadow: none;">
+								<div class="panel-heading" role="tab" id="headingTwo" style="margin-top: 5px;padding: 10px 15px;">
+									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="outline:none;">
+										<h4 class="panel-title" style="color:black">
+											<div class="row form_accordion">
+												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" style="padding-top:3px">
+													<span class="medical" style=""> Allergies</span>
+												</div>
+												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
+													<span style="" class="glyphicon glyphicon-chevron-down"></span>
+												</div>
+											</div>
+										</h4>
+									</a>
+								</div>
+								<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+									<div class="panel-body" style="background-color:rgb(237,237,237);border-top-width: 0px;">
+										<input type="text" class="form-control" id="exampleInputName1" placeholder="Allergies">
+									</div>
+								</div>
+							</div>
+
+							<div class="panel panel-default" style="border: none;box-shadow: none;">
+								<div class="panel-heading" role="tab" id="headingThree" style="margin-top: 5px;padding: 10px 15px;">
+									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="outline:none;">
+										<h4 class="panel-title" style="color:black">
+											<div class="row form_accordion">
+												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 title" style="padding-top:3px">
+													<span class="medical" style="">Symptoms</span>
+												</div>
+												<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icon">
+													<span style="" class="glyphicon glyphicon-chevron-down"></span>
+												</div>
+											</div>
+										</h4>
+									</a>
+								</div>
+								<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+									<div class="panel-body" style="background-color:rgb(237,237,237);border-top-width: 0px;">
+										<input type="text" class="form-control" id="exampleInputName2" placeholder="Symptoms">
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<input type="text" name="name.full" class="form-control" id="name" placeholder="Name:" style="margin-top: -10px;">
+						</div>
+
+						<div class="form-group row form_fields">
+							<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+								<input type="text" class="form-control" id="age" placeholder="Age" name="age">
+							</div>
+							<div class="col-lg-2 col-md-2 col-sm-0 col-xs-2">
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-8 col-xs-6" style="padding-top: 10px;">
+								<label for="gender" class="gender">Sex:</label>
+								<label class="radio-inline">
+									<input type="radio" name="gender" class="value" value="Male">M</label>
+								<label class="radio-inline">
+									<input type="radio" name="gender" class="value" value="Female" >F</label>
+								<label class="radio-inline">
+									<input type="radio" name="gender" class="value" value="Other" >O</label>
+								<!-- <input type="text" class="form-control" id="gender" placeholder="Gender" name="gender" style="padding-top: 10px; padding-bottom: 10px; margin-top: 0px;"> -->
+							</div>
+						</div>
+
+						<div class="form-group">
+							<input type="email" name="email" class="form-control" id="email" placeholder="Email:">
+						</div>
+
+						<div class="form-group">
+							<input type="phone" name="phone" class="form-control" id="phone" placeholder="Phone(Optional)">
+						</div>
+
+						</br>
+						<div class="row">
+							<div class="col-lg-3"></div>
+							<div class="col-lg-6">
+								<button type="submit" class="btn btn-default doctor_btn" style="margin-left: 20px; padding: 3px 15px;" >Submit</button>
+							</div>
+							<div class="col-lg-3"></div>
+						</div>
+					</form>
+
+				</div>
+				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+				</div>
+			</div>
+
+		</div>
+
+
+
+		<!-- <div class="form">
 			<div class="row">
 				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
@@ -222,7 +350,7 @@
 						</div>
 						<br>
 						<input type="submit" value="Enquire" class="btn btn-primary btn-md provider_btn" style="" />
-						<!-- <button type="submit" class="button">Enquire</button> -->
+
 					</form>
 					{{#if enquirySent}}
 						<br>
@@ -233,7 +361,7 @@
 				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 </div>
