--- a/Gmt/templates/views/signup.hbs
+++ b/Gmt/templates/views/signup.hbs
@@ -1,4 +1,4 @@
-	{{>header}}
+	<!-- {{>header}}
 	<div class="row marginAlign">
 		<div class="square">
 			<strong style="margin-left:20px;font-size:18px;">Sign Up</strong>
@@ -21,4 +21,5 @@
 			{{/if}}
 		</div>
 	</div>
-	{{>footer}}
+	{{>footer}} -->
+  sorry
