--- a/Gmt/templates/views/signup.hbs
+++ b/Gmt/templates/views/signup.hbs
@@ -1,25 +1,5 @@
-	<!-- {{>header}}
+	{{>header}}
 	<div class="row marginAlign">
-		<div class="square">
-			<strong style="margin-left:20px;font-size:18px;">Sign Up</strong>
-			<form class="form-inline" method="post">
-				<input type="hidden" name="action" value="signup">
-				<div class="form-group">
-					<input type="text" name="name.full" class="form-control" id="first" placeholder="Enter Full Name">
-				</div>
-				<br>
-				<input name="email" type="email" class="form-control" id="email" placeholder="Email">
-				<br>
-				<input name="password" type="password" class="form-control" id="password" placeholder="Password">
-				<br>
-				<input name="password_confirm" type="password" class="form-control" id="pass" placeholder="Re-enter Password">
-				<br>
-				<button type="submit" class="btn btn-default">Sign up</button>
-			</form>
-			{{#if signedUpSuccessfully}}
-				<h3>Signed up successfully</h3>
-			{{/if}}
-		</div>
-	</div>
-	{{>footer}} -->
-  sorry
+  <p>sorry</p>
+</div>
+	{{>footer}}
